# hyperliquid-data-pipeline

./: .env.example  .gitignore  GITHUB_SETUP.md  LICENSE  Makefile  README.md  README_GITHUB.md  SOL_SETUP_COMPLETE.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: btc-microstructure.json  maker-backtester-design.md  strategy-memo.md
docs/briefs/: researcher-mm-theory-brief.md  sde-v3-policy-brief.md  sim-sweep-brief.md  track2-book-brief.md
docs/research/: fee-schedule.md  market-making-theory.md  node-cost-analysis.md
examples/: analyze_btc_capture.py  backtest_demo.py  ohlcv_indicators.py  orderbook_metrics.py
protos/: gen_qn_pb.sh  orderbook.proto
scripts/: bench_ws_latency.py  capture.py  monitor_sol_data.py  run_maker_sim.py  run_pipeline.py  setup_sol_pipeline.py  validate_book_real_data.py
src/hyperliquid_pipeline/: __init__.py
tests/: conftest.py  test_asset_ctx.py  test_backfill.py  test_backpressure.py  test_backtest_data.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_strategies.py  test_batching_storage.py  test_bbo_parsing.py  test_bench_math.py  test_cli_symbols.py  test_dual_timestamps.py  test_gap_backfill_integration.py  test_gap_detection.py  test_latency_stats.py  test_message_parsing.py  test_node_feed.py  test_object_store.py  test_ofi.py  test_orchestrator_shutdown.py  test_processors.py  test_quicknode_feed.py  test_reconnect_backoff.py  test_sim_fills.py  test_sim_queue.py  test_sim_sweep.py  test_spool.py  test_validation.py
tests/book/: conftest.py  test_diff_parser.py  (+3 more)
(+56 files in other folders)
