[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hyperliquid-data-pipeline"
version = "0.1.0"
description = "Market-data pipeline for Hyperliquid: historical S3 ingestion, real-time WebSocket feeds, OHLCV and orderbook metrics, multi-backend storage"
authors = ["Aayush Giri <aayushgiri1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
boto3 = "^1.34.0"
lz4 = "^4.3.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
influxdb-client = "^1.40.0"
redis = "^5.0.0"
aiohttp = "^3.9.0"
websockets = "^12.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
typer = "^0.9.0"
apscheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
